--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+
+* {box-sizing: border-box;
+}
+
 .container{
   max-width: 600px;
   margin: auto;
@@ -7,13 +11,16 @@
   overflow: auto;
 }
 
+img{
+  max-width: 100%;
+}
+
 body {
   background: #5F9EA0;
 }
 
-* {box-sizing: border-box;
-}
 
+@media(min-width: 650px) {
 
 .left-column{
   width: 50%;
@@ -26,3 +33,4 @@ body {
   float: left;
   padding-left: 20px;
   }
+}
