--- a/style.css
+++ b/style.css
@@ -15,6 +15,20 @@
   /* set default font color to dark gray */
 }
 
+.byline{
+  margin-bottom: 0;
+  /* removed space between byline and margin */
+  color: #006666;
+  /* changed color of byline to dark turquoise */
+}
+.publish-time{
+  margin-top: 0;
+  /* removed space between byline and margin */
+  font-size: 70%;
+  /* set font size to be smaller */
+  color: #006666;
+  /* changed color of publish time to dark turquoise */
+}
 img{
   max-width: 100%;
   /* fixed image from overflowing container */
@@ -22,14 +36,96 @@ img{
   /* added border to image */
 }
 
+.pull-quote{
+  font-weight: bold;
+  /* made pull quote bold */
+  font-size: 110%;
+  /* made pull quote bigger */
+  font-style: italic;
+  /* made pull quote italic */
+  box-shadow: 5px 10px #008B8B;
+  /* added box shadow to pull quote */
+  border: solid #008B8B .5px;
+  /* added thin border around pull quote */
+}
+
+.final-paragraph{
+  padding-top: 10px;
+  /* fixed spacing bw text and pull quote */
+}
+
+.story-text {
+  padding: 10px;
+  font-size: 80%;
+  /* made story text smaller */
+}
+
+.bob-pic{
+  float: right;
+  /* floated image of Woodward next to his name */
+  width: 30%;
+  /* fixed size of image of Woodward so it will float next to his name */
+}
+
+.author-profile{
+  float: left;
+  /* floated author's name so image will sit next to it */
+  width: 70%;
+  /* fixed size of author's name so that image will sit next to it */
+  text-decoration: underline;
+  /* added underline to author profiles+name */
+}
+
+h1{
+  text-decoration: underline;
+  /* added underline to headline text*/
+  font-style: italic;
+  /* made headline italic */
+}
+
+h2{
+  font-style: italic;
+  /* made author profile heading italic */
+  color: #006666
+  /* made author profile dark turquoise */
+}
+
+.profile{
+  border-bottom: dotted;
+  /* added border bw author profile p and article lists*/
+  padding-bottom: 40px;
+  /* added space bw border and text*/
+  font-weight: bold;
+  /* made profile text bold*/
+  font-size: 130%;
+  /* made profile text bigger */
+}
+
+
 body {
   background: #5F9EA0;
+}
+
+ul, ol {
+  font-size: 80%;
+  /* made font of article and book lists smaller */
 }
 
 @media(max-width: 650px) {
 .right-column{
   border-top: dotted;
   /* added border bw lists when shown on small screen*/
+}
+.bob-pic{
+  float: none;
+  /* fixed image so it displays stacked on small screen*/
+  width: 100%;
+  /* fixed image so it spans width of screen on small screen*/
+}
+.profile{
+  padding-bottom: 35px;
+  /* fixed padding below profile text so it looks right on small screen*/
+
 }
 }
 
